# CPlusPlusThings

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_EN.md  clang-format.sh  compile_commands.json  list.txt
basic_content/: CMakeLists.txt
basic_content/abstract/: abstract.cpp  derived_full.cpp  interesting_facts1.cpp  interesting_facts2.cpp  interesting_facts3.cpp  interesting_facts4.cpp  interesting_facts5.cpp  pure_virtual.cpp  test.cpp
basic_content/assert/: assert.c
basic_content/bit/: learn.cpp
basic_content/c_poly/: c++_examp.cpp  c_examp  c_examp.c
basic_content/const/: 2.cpp  const_function.cpp  const_num.cpp
basic_content/decltype/: decltype.cpp
basic_content/enum/: classic_practice  classic_practice.cpp  tradition_color.cpp
basic_content/explicit/: explicit.cpp
basic_content/friend/: friend_class.cpp  friend_func.cpp
basic_content/func_pointer/: func_pointer.cpp
basic_content/inline/: inline.cpp  inline.h  inline_virtual.cpp
basic_content/macro/: do_while.cpp  sig_examp.cpp
basic_content/maohao/: maohao.cpp
basic_content/pointer_refer/: copy_construct.cpp  effec.cpp
basic_content/sizeof/: genA.cpp  moreinhe.cpp  static.cpp  virinhe.cpp
basic_content/static/: static_demo.cpp  static_error_variable.cpp
basic_content/struct/: struct_func_func.cpp
basic_content/this/: person.cpp
basic_content/volatile/: noopt_vola.cpp
basic_content/vptr_vtable/: vptr1.cpp
c++2.0/c++11/: CMakeLists.txt  alias.cpp  auto.cpp  constexpr.cpp  decltype.cpp  default_delete.cpp  explicit.cpp  final.cpp  hash.cpp  initializer.cpp  lambda.cpp  move.cpp  noexcept.cpp  nullptr.cpp  override.cpp  rvalue.cpp  template_template.cpp  tuple.cpp  type_alias.cpp  uniform_initialization.cpp
codingStyleIdioms/: CMakeLists.txt
codingStyleIdioms/1_classInitializers/: 1.1_nesting_between_classes.cpp  1.1_类之间嵌套.cpp  1.2_无默认构造的继承.cpp  1.3_const_data_members_and_reference_data_members.cpp  1.3_类中const数据成员、引用数据成员.cpp  CMakeLists.txt  initializer.cpp
codingStyleIdioms/2_enumclass/: namespace.cpp
codingStyleIdioms/3_RAII/: CMakeLists.txt  RAII.cpp  RAII_fstram.cpp  c++_example.cpp  c++_example1.cpp  c++_example2.cpp  c_example.cpp
codingStyleIdioms/4_copy-swap/: copy-swapAndADL.cpp
codingStyleIdioms/5_pImpl/: noPimpl.cpp  pimpl.cpp  pimplTime.cpp  pimplTime.h
concurrency/: CMakeLists.txt
concurrency/Threading_In_CPlusPlus/: CMakeLists.txt
concurrency/concurrency_v1/: CMakeLists.txt
concurrency/process/: CMakeLists.txt  proc.h  proc_fork_twice.c  proc_state.c  proc_test.c
concurrency/pthread/: CMakeLists.txt  affinity.h  posixtest.h  pthread_attr_setschedpolicy.c  pthread_attr_setschedpolicy_fifo.c  pthread_attr_setschedpolicy_other.c  pthread_attr_setschedpolicy_rr.c  pthread_barrier.cpp  pthread_common.h  pthread_semaphors.c
concurrency/thread_example/: CMakeLists.txt  opencv.cpp
design_patterns/Hands-On-Design-Patterns-with-CPP/: CMakeLists.txt
gtest/: CMakeLists.txt
gtest/cpp_test/: cpp_test.cpp  cpp_test.h  demo.lua
learn_algorithms/self_learn/: CMakeLists.txt
practical_exercises/: CMakeLists.txt
practical_exercises/10_day_practice/: CMakeLists.txt
practical_exercises/Design_patterns/: singleton.cpp
practical_exercises/callback/: CMakeLists.txt  callback_convert.cpp  callback_func.cpp  callback_func_pro.cpp  callback_lambda.cpp
practical_exercises/cpp_principles_practice/: CMakeLists.txt
practical_exercises/crc/: CMakeLists.txt  crc16.cpp  crc16.h  crc32.c  crc64.c  crc8.c  crc_poly.c  crchash.cpp  crchash.h  edidvic.c  test_crc.cpp  test_harness.cpp  test_harness.h
practical_exercises/dp_scrambler/: CMakeLists.txt  DPScramble.h  README.md  lfsr.cpp  lfsr.h  scrambler_hbrx_rbr.cpp
practical_exercises/dptx_parse/: CMakeLists.txt  dptx.h  dptx_parse.c
practical_exercises/edid-gen/: CMakeLists.txt  edid_gen.c  edid_gen.h
practical_exercises/edidvic/: CMakeLists.txt  edidvic.c  vic_timings.h
practical_exercises/epoll/: epoll.c  epoll_sample.cpp
practical_exercises/interview_test/: is_point_inside_triangle.cpp  volatile.cpp
practical_exercises/kernel_data_structure_algorithm/: CMakeLists.txt
practical_exercises/key_exercises/: 1.conversion_func.cpp  10.Clock++_operator_overloading.cpp  11.Clock_with_overloaded_parentheses.cpp  12.Exception_catch.cpp  13.Inheritance_encapsulation.cpp  14.Input_and_output_operator_overloading.cpp  15.Input_and_output_overload.cpp  16.Output_format.cpp  17.readwrite_files.cpp  18.Stack_of_class_templates.cpp  19.StringSplitCpp.cpp  2.bracket_overload.cpp  20.magic_enum_example.cpp  21.MultiDimensionalArray.cpp  21.TwoDimensionalArray.cpp  22.helen_formula.cpp  23.average_method.cpp  24.excute_cmd.cpp  25.cjson_parse.cpp  26.compare_two_files.cpp  27.is_float_or_int.cpp  28.check_Big_Little_endian.cpp  29.malloc.cpp  3.function_template.cpp  30.two_dimensional_array_convert.cpp  31.data_type_range.cpp  31.memset_struct_class.cpp  32.convert_picture_to_hex.cpp  33.num_convert_negative.cpp  34.func_pointer.c  34.func_pointer.h  34.list.h  382_reg.h  4.dynamic_array.cpp  5.Dictionary_insertion_and_lookup  5.Dictionary_insertion_and_lookup.cpp  6.timer_clock.cpp  7.load_setting.cpp  8.Array_of_class_template_specialization.cpp  9.Casting_of_operator_overloading.cpp  (+10 more)
practical_exercises/looper_handler/: CMakeLists.txt  example.cpp  loop.cpp  loop.h
practical_exercises/lvds/: CMakeLists.txt  jeida_vesa.cpp
practical_exercises/opencv/: homography_2d.cpp
practical_exercises/primer_cpp_5/: CMakeLists.txt
practical_exercises/primer_cpp_6/: 4.10_array.cpp  4.3_string.cpp  4.7_pointer.cpp  6.8.2_IO.cpp  7.10.2_func_pointer.cpp  7.3.4_array.cpp  8.2.6_filefunc.cpp  CMakeLists.txt
practical_exercises/scrambler/: CMakeLists.txt  README.md  scrambler_hbrx_rbr.c
practical_exercises/share_memory/: CMakeLists.txt  README  mmap  mmap.c  pipe.c  pipe_fifo.c  pipe_fifo_client.c  pipe_fifo_client_rw.c  pipe_fifo_comm.h  pipe_fifo_server.c  pipe_fifo_server_calc.c  pipe_fifo_server_rw.c  (+18 more)
thread_example/: CMakeLists.txt  README.md  opencv.cpp  simple_thread.cpp  thread_param.cpp
(+2290 files in other folders)
