cmake_minimum_required(VERSION 3.16)
project(CPlusPlusThings)

set(CMAKE_CXX_STANDARD 14)

include_directories("/usr/local/include/")
include_directories("/usr/local/Cellar/opencv/4.5.1_3/include/opencv4/")
#add_executable(CPlusPlusThings main.cpp)

add_executable(derived_full basic_content/abstract/derived_full.cpp)
add_executable(interesting_facts1 basic_content/abstract/interesting_facts1.cpp)
add_executable(interesting_facts2 basic_content/abstract/interesting_facts2.cpp)
add_executable(interesting_facts5 basic_content/abstract/interesting_facts5.cpp)
add_executable(pure_virtual basic_content/abstract/pure_virtual.cpp)
add_executable(test basic_content/abstract/test.cpp)
add_executable(assert basic_content/assert/assert.c)
add_executable(ignore_assert basic_content/assert/ignore_assert.c)
add_executable(c++_examp basic_content/c_poly/c++_examp.cpp)
add_executable(c_examp basic_content/c_poly/c_examp.c)
add_executable(main basic_content/const/class_const/overload_example/main.cpp)

add_executable(const_file2 basic_content/const/extern_const/const_file2.cpp)
add_executable(file2 basic_content/const/extern_const/file2.cpp)
add_executable(condition3 basic_content/const/funciton_const/condition2/condition3.cpp)
add_executable(condition1 basic_content/const/funciton_const/condition2/condition1.cpp)

add_executable(const_function basic_content/const/const_function.cpp)
add_executable(const_num basic_content/const/const_num.cpp)
add_executable(decltype c++2.0/c++11/decltype.cpp)
add_executable(learn basic_content/bit/learn.cpp)
add_executable(classic_practice basic_content/enum/classic_practice.cpp)
add_executable(opencv thread_example/opencv.cpp)
add_executable(genA english/basic_content/sizeof/genA.cpp)
add_executable(static english/basic_content/sizeof/static.cpp)
add_executable(virinhe english/basic_content/sizeof/virinhe.cpp)
add_executable(morevir english/basic_content/sizeof/morevir.cpp)
add_executable(vptr1 english/basic_content/vptr_vtable/vptr1.cpp)
add_executable(what_is_stl src_analysis/stl/stl_src/what_is_stl.cpp)
add_executable(mutex_demo thread_example/lock/mutex_demo.c)
add_executable(initializer codingStyleIdioms/1_classInitializers/initializer.cpp)
add_executable(mutex_test thread_example/thread/thread_test.c)
add_executable(thread_test thread_example/thread/thread_test.c)
add_executable(thread_param thread_example/thread/thread_param.cpp)
add_executable(stl_map src_analysis/stl/stl_src/Containers/stl_map.cpp)
add_executable(mutex_cpp thread_example/lock/mutex_cpp.cpp)
add_executable(mutex_try_lock thread_example/lock/mutex_try_lock.cpp)
add_executable(1_Inverted_bits leetcode/1_Inverted_bits.cpp)
add_executable(1.1_invertd_Integer leetcode/1.1_invertd_Integer.cpp)

add_executable(conversion_func practical_exercises/key_exercises/1.conversion_func.cpp)
add_executable(simple_thread thread_example/thread/simple_thread.cpp)
add_executable(2.bracket_overload practical_exercises/key_exercises/2.bracket_overload.cpp)
add_executable(3.function_template practical_exercises/key_exercises/3.function_template.cpp)
add_executable(4.dynamic_array practical_exercises/key_exercises/4.dynamic_array.cpp)
add_executable(5.Dictionary_insertion_and_lookup practical_exercises/key_exercises/5.Dictionary_insertion_and_lookup.cpp)
add_executable(unique_ptr src_analysis/stl/stl_src/Ptr/unique_ptr.cpp)
add_executable(4.3_string practical_exercises/primer_cpp_6/4.3_string.cpp)
add_executable(4.7_pointer practical_exercises/primer_cpp_6/4.7_pointer.cpp)
add_executable(4.10_array practical_exercises/primer_cpp_6/4.10_array.cpp)
add_executable(6.8.2_IO practical_exercises/primer_cpp_6/6.8.2_IO.cpp)
add_executable(template learn_class/modern_C++_30/compilerpoly/template.cpp)
add_executable(7.3.4_array practical_exercises/primer_cpp_6/7.3.4_array.cpp)
add_executable(forward learn_class/modern_C++_30/reference/forward.cpp)
add_executable(producer_consumer design_pattern/producer_consumer/producer_consumer.cpp)
target_link_libraries(producer_consumer -lpthread)

