cmake_minimum_required(VERSION 3.14)
project(Morden_C++)

set(CMAKE_CXX_STANDARD 17)

add_executable(copy_consrtuct virtual/set3/copy_consrtuct.cpp)
add_executable(derived_full abstract/derived_full.cpp)
add_executable(interesting_facts1 abstract/interesting_facts1.cpp)
add_executable(interesting_facts2 abstract/interesting_facts2.cpp)
add_executable(interesting_facts5 abstract/interesting_facts5.cpp)
add_executable(pure_virtual abstract/pure_virtual.cpp)
#add_executable(test abstract/test.cpp)
add_executable(assert assert/assert.c)
add_executable(ignore_assert assert/ignore_assert.c)
add_executable(c++_examp c_poly/c++_examp.cpp)
add_executable(c_examp c_poly/c_examp.c)
add_executable(main const/class_const/overload_example/main.cpp)

add_executable(const_file2 const/extern_const/const_file2.cpp)
add_executable(file2 const/extern_const/file2.cpp)
add_executable(condition3 const/funciton_const/condition2/condition3.cpp)
add_executable(condition1 const/funciton_const/condition2/condition1.cpp)

add_executable(volatile volatile/volatile.cpp)
add_executable(volatile_noopt volatile/noopt_vola.cpp)

add_executable(const_function const/const_function.cpp)
add_executable(const_num const/const_num.cpp)
add_executable(decltype1 decltype/decltype.cpp)
add_executable(friend_class friend/friend_class.cpp)
add_executable(learn bit/learn.cpp)
add_executable(classic_practice enum/classic_practice.cpp)
target_link_libraries(classic_practice dl)
add_executable(extern_c extern/extern_c/add.c extern/extern_c/add.cpp extern/extern_c/add.h)
add_executable(extern_cpp extern/extern_c++/add.h extern/extern_c++/add.cpp extern/extern_c++/add.c)
add_executable(person this/person.cpp)
add_executable(macro macro/sig_examp.cpp)