cmake_minimum_required(VERSION 3.14)
project(key_exercises)

set(CMAKE_CXX_STANDARD 17)
include_directories(../lib/magic_enum/include)
include_directories(../lib)
add_executable(20.magic_enum_example key_exercises/20.magic_enum_example.cpp)
add_executable(conversion_func key_exercises/1.conversion_func.cpp)
add_executable(2.bracket_overload key_exercises/2.bracket_overload.cpp)
add_executable(3.function_template key_exercises/3.function_template.cpp)
add_executable(4.dynamic_array key_exercises/4.dynamic_array.cpp)
add_executable(7.load_settings key_exercises/7.load_setting.cpp key_exercises/7.382_reg.h)
target_link_libraries(4.dynamic_array gtest gtest_main pthread)
add_executable(5.Dictionary_insertion_and_lookup key_exercises/5.Dictionary_insertion_and_lookup.cpp)
add_executable(19.StringSplitCpp key_exercises/19.StringSplitCpp.cpp)
add_executable(6.timer_clock key_exercises/6.timer_clock.cpp)
add_executable(8.array_of_class_temp key_exercises/8.Array_of_class_template_specialization.cpp)
add_executable(9.casting_Of_operator_overloading key_exercises/9.Casting_of_operator_overloading.cpp)
add_executable(10.clock++_operator_ov key_exercises/10.Clock++_operator_overloading.cpp)
add_executable(11.clock_with_overloaded_par key_exercises/11.Clock_with_overloaded_parentheses.cpp)
add_executable(12.exception_catch key_exercises/12.Exception_catch.cpp)
add_executable(13.inheritance_encap key_exercises/13.Inheritance_encapsulation.cpp)
add_executable(14.input_and_output_operator key_exercises/14.Input_and_output_operator_overloading.cpp)
add_executable(15.input_and_output_overload key_exercises/15.Input_and_output_overload.cpp)
add_executable(16.output_format key_exercises/16.Output_format.cpp)
add_executable(17.readwrite_files key_exercises/17.readwrite_files.cpp)
add_executable(18.stack_of_class_templates key_exercises/18.Stack_of_class_templates.cpp)
add_executable(21.MultiDimensionalArray key_exercises/21.MultiDimensionalArray.cpp)
add_executable(22.helen_formula key_exercises/22.helen_formula.cpp)
add_executable(23.average_method key_exercises/23.average_method.cpp)


add_executable(timerfunc timerfunc/timer.cpp timerfunc/timer.h timerfunc/alarm_timer.cpp timerfunc/alarm_timer.h timerfunc/main.cpp)
target_link_libraries(timerfunc -lpthread)